# dupfind

./: Cargo.toml  LICENSE  README.md
.cargo/: audit.toml
.github/workflows/: ci.yml
benches/: hash_bench.rs  scan_bench.rs
crates/dupfind-cleaner/: Cargo.toml
crates/dupfind-cleaner/src/: interactive.rs  lib.rs
crates/dupfind-cli/: Cargo.toml
crates/dupfind-cli/src/: cli.rs  lib.rs  serve.rs  table.rs
crates/dupfind-core/: Cargo.toml
crates/dupfind-core/src/: error.rs  lib.rs  traits.rs  types.rs
crates/dupfind-hasher/: Cargo.toml
crates/dupfind-hasher/src/: algorithms.rs  async_hash.rs  lib.rs  parallel.rs  similar.rs
crates/dupfind-reporter/: Cargo.toml
crates/dupfind-reporter/src/: csv.rs  html.rs  json.rs  lib.rs
crates/dupfind-scanner/: Cargo.toml
crates/dupfind-scanner/src/: filter.rs  lib.rs
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  table.rs
src/cleaner/: interactive.rs  mod.rs
src/hasher/: algorithms.rs  mod.rs  parallel.rs
src/reporter/: csv.rs  html.rs  json.rs  mod.rs
src/scanner/: filter.rs  mod.rs
tests/: hasher_test.rs  proptest.rs  reporter_test.rs  scanner_test.rs
