[package]
name = "dupfind"
version = "0.1.0"
edition = "2021"
description = "A fast duplicate file finder and cleaner written in Rust"
license = "MIT"
authors = ["ilksci"]

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
walkdir = "2"
indicatif = "0.17"
crossterm = "0.27"
thiserror = "2"
