[package]
name = "dupfind"
version = "0.2.0"
edition = "2021"
description = "高性能重复文件查找与清理工具，用 Rust 编写"
license = "MIT"
authors = ["ilksci"]

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1"
sha2 = "0.10"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
walkdir = "2"
indicatif = "0.17"
crossterm = "0.27"
thiserror = "2"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
trash = "5"
tabled = "0.16"
