[package]
name = "dupfind-cleaner"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "dupfind 重复文件清理模块（自动 + 交互式 TUI）"

[dependencies]
dupfind-core = { path = "../dupfind-core" }
crossterm = "0.28"
ratatui = "0.28"
trash = "5"
log.workspace = true
