[package]
name = "dupfind-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "dupfind 核心类型、错误和 trait 定义"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
walkdir.workspace = true
csv = "1"
toml = "0.8"
