[package]
name = "dupfind-hasher"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "dupfind 三级去重哈希引擎"

[dependencies]
dupfind-core = { path = "../dupfind-core" }
sha2.workspace = true
blake3 = "1"
rayon = "1"
indicatif = "0.17"
log.workspace = true
serde.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "fs", "io-util"] }
image = "0.23"
img_hash = "3"
