[package]
name = "dupfind-scanner"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "dupfind 目录扫描与文件过滤模块"

[dependencies]
dupfind-core = { path = "../dupfind-core" }
walkdir.workspace = true
log.workspace = true
infer = "0.16"
indicatif = "0.17"
